dag 1 na meeting met pavel
bijna klaar met basic idea, begonnen met duits

--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -2,7 +2,7 @@
 
 \chapter{Deriving the matching type}\label{ch:deriving-matching}
 
-In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the matching type have a morpheme that spells out phi-features and another one that spells out case-features. This is the crucial difference with internal-only languages such as Modern German, that have a portmanteau for phi- and case-features. This means that the features of the relative pronoun and the light head are spelled out in such a way that they form the constituents shown in Figure \ref{fig:rel-lh-matching-simple}.
+In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the matching type have a lexical entry that spells out phi features and another one that spells out case features. This is the crucial difference with internal-only languages such as Modern German, that have a portmanteau for phi and case features. This means that the internal syntax of light heads and relative pronouns looks as shown in Figure \ref{fig:rel-lh-matching-simple}.
 
 \begin{figure}[htbp]
   \center
@@ -67,7 +67,7 @@ In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the matching t
   \label{fig:rel-lh-matching-simple}
 \end{figure}
 
-These lexical entries lead to a grammaticality pattern as shown in Table \ref{tbl:overview-matching}.
+These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl:overview-matching}.
 
 \begin{table}[htbp]
   \center
@@ -85,7 +85,7 @@ These lexical entries lead to a grammaticality pattern as shown in Table \ref{tb
   structure & \tsc{lh} & \tsc{rp}\scsub{int}            \\
   \tsc{k}\scsub{int} > \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{1}], [ϕ]                               &
-  [\tsc{rel}], [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}]], [ϕ] &
+  [\tsc{rel}], [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}]], [ϕ]&
   no & none & *                                         \\
   \tsc{k}\scsub{int} < \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}]], [ϕ]             &
@@ -97,16 +97,16 @@ These lexical entries lead to a grammaticality pattern as shown in Table \ref{tb
 \label{tbl:overview-matching}
 \end{table}
 
-First consider the situation in which the internal and the external case match. The light head consists of a phi-feature morpheme and a case-feature morpheme. The relative pronoun consists of the same two morphemes plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such a structure that  the light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
-In this situation, the fact that there is a phi- and case-feature portmanteau (as in internal-only languages) or there are two separate morphemes for the features (as in matching languages) does not make a difference for the containment and for the grammaticality.
+Consider first the situation in which the internal and the external case match. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same two morphemes plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is a constituent that is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
+In this situation, the fact that there is a phi and case feature portmanteau (as in internal-only languages) or there are two separate morphemes for the features (as in matching languages) does not make a difference for the containment and for the grammaticality.
 
-Consider now the situation in the internal case wins the case competition. The light head consists of a phi-feature morpheme and a case-feature morpheme. The relative pronoun consists of the same phi-feature morpheme, a case-morpheme that that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}) plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such syntactic structures that neither the light head nor the relative pronoun structurally forms a constituent within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
-In this situation, the fact that there is a phi- and case-feature portmanteau (as in internal-only languages) or there are two separate morphemes for the features (as in matching languages) does make a difference for the containment and for the grammaticality: this situation is grammatical in internal-only languages and it is not in matching languages.
+Consider now the situation in the internal case wins the case competition. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same phi feature morpheme, a case morpheme that that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is a constituent that is structurally or formally contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+In this situation, the fact that there is a phi and case feature portmanteau (as in internal-only languages) or there are two separate morphemes for the features (as in matching languages) does make a difference for the containment and for the grammaticality: this situation is grammatical in internal-only languages and it is not in matching languages.
 
-Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi-feature morpheme, a case-feature morpheme and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). These lexical entries create such syntactic structures that neither the light head nor the relative pronoun structurally forms a constituent within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
-In this situation, the fact that there is a phi- and case-feature portmanteau (as in internal-only languages) or there are two separate morphemes for the features (as in matching languages) does not make a difference for the containment and for the grammaticality.
+Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi feature morpheme, a case feature morpheme and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is a constituent that is structurally or formally contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+In this situation, the fact that there is a phi and case feature portmanteau (as in internal-only languages) or there are two separate morphemes for the features (as in matching languages) does not make a difference for the containment and for the grammaticality.
 
-In Chapter \ref{ch:typology}, I showed that Polish is a language of the matching type. In this chapter, I show that Polish light heads and relative pronouns have this type of structure described in Figure \ref{fig:rel-lh-matching-simple}. I give a compact version of the structures in Figure \ref{fig:rel-lh-pol}.
+In Chapter \ref{ch:typology}, I showed that Polish is a language of the matching type. In this chapter, I show that Polish light heads and relative pronouns have the type of internal syntax described in Figure \ref{fig:rel-lh-matching-simple}. I give a compact version of the internal syntax of Polish light heads and relative pronouns in Figure \ref{fig:rel-lh-pol}.
 
 \begin{figure}[htbp]
   \center
@@ -179,10 +179,10 @@ In Chapter \ref{ch:typology}, I showed that Polish is a language of the matching
 \end{figure}
 
 Consider the light head in Figure \ref{fig:rel-lh-pol}.
-Light heads (i.e. the phi- and case-features) in Polish are spelled out by two morphemes, which are both circled. The phi-features are spelled out as \tit{o} and the case features are spelled out as \tit{go} or \tit{mu}, depending on which case they realize.
+Light heads (i.e. the phi and case features) in Polish are spelled out by two morphemes, which are both circled. The phi features are spelled out as \tit{o} and the case features are spelled out as \tit{go} or \tit{mu}, depending on which case they realize.
 Consider the relative pronoun in Figure \ref{fig:rel-lh-pol}.
-Relative pronouns in Polish contain one more morpheme than light heads: the constituent that forms the light head (i.e. phi- and case-features) and the \tsc{rel}P, again circled. The \tsc{rel}P is spelled out as \tit{k}.
-Throughout this chapter, I discuss the exact feature content of relative pronouns and light heads, I give lexical entries for them, and I show how these lexical entries form the constituents shown in Figure \ref{fig:rel-lh-pol}.
+Relative pronouns in Polish contain one more morpheme than light heads: the constituent that forms the light head (i.e. phi and case features) and the \tsc{rel}P, again circled. The \tsc{rel}P is spelled out as \tit{k}.
+Throughout this chapter, I discuss the exact feature content of relative pronouns and light heads, I give lexical entries for them, and I show how these lexical entries lead to the internal syntax of light heads and relative pronoun as shown in Figure \ref{fig:rel-lh-pol}.
 
 The chapter is structured as follows.
 First, I discuss the relative pronoun. I decompose the relative pronoun into the three morphemes I showed in Figure \ref{fig:rel-lh-pol}, and I show which features correspond to which morphemes.
@@ -195,7 +195,7 @@ Finally, I compare the constituents of the light head and the relative pronoun. 
 
 \section{The Polish relative pronoun}\label{sec:pol-rel}
 
-In the introduction of this chapter, I suggested that in Polish features of the relative pronoun are spelled out in such a way that they form the constituents shown in \ref{ex:simple-matching-rp}.
+In the introduction of this chapter, I suggested that the internal syntax of relative pronouns in Polish looks as shown in \ref{ex:simple-matching-rp}.
 
 \ex.\label{ex:simple-matching-rp}
 \begin{forest} boom
@@ -233,7 +233,7 @@ In the introduction of this chapter, I suggested that in Polish features of the 
 \end{forest}
 
 In Figure \ref{ex:simple-matching-rp} I only show three features: \tsc{rel}, ϕ and \tsc{k}. In Chapter \ref{ch:deriving-onlyinternal} I showed that Modern German relative pronouns contain more features than that. In this section, I show that Polish relative pronouns consist of the same features.
-Crucially, the main claim I made in Chapter \ref{ch:the-basic-idea} remains unchanged: Polish has a separate morpheme for phi-features, one for case-features and one for the features the light head does not contain. Actually, the morpheme for case-features contains a number feature and the phi-feature morpheme does not contain one, but this does not influence the point here.
+Crucially, the main claim I made in Chapter \ref{ch:the-basic-idea} remains unchanged: Polish has a separate morpheme for phi features, one for case features and one for the features the light head does not contain. Actually, the morpheme for case features contains a number feature and the phi feature morpheme does not contain one, but this does not influence the point here.
 I show the complete structure that I work towards in this section in \ref{ex:pol-rp}.
 
 \ex.\label{ex:pol-rp}
@@ -301,7 +301,7 @@ I discuss two relative pronouns: the animate accusative and the animate dative. 
 I decompose the relative pronouns in three morphemes: \tit{k}, \tit{o} and the suffix (\tit{go} or \tit{mu}). For each morpheme, I discuss which features they spell out, I give their lexical entries, and I show how I construct the relative pronouns by combining the separate morphemes.
 
 I start with the suffixes \tit{go} and \tit{mu}.
-These two morphemes correspond to what I called the case-feature morpheme in Chapter \ref{ch:the-basic-idea} and the introduction to this chapter. In addition, the morphemes spell out a number feature.
+These two morphemes correspond to what I called the case feature morpheme in Chapter \ref{ch:the-basic-idea} and the introduction to this chapter. In addition, the morphemes spell out a number feature.
 
 First I focus on \tit{mu} and I extend the analysis to \tit{go}. Consider Table \ref{tbl:pol-datives}.
 
@@ -477,7 +477,7 @@ The morpheme \tit{go} differs from \tit{mu} in that it lacks the feature \tsc{f}
 In sum, the morphemes \tit{go} and \tit{mu} spell out case features and a number feature.
 
 This leaves the two morphemes \tit{k} and \tit{o}. First I discuss the \tit{o}.
-This morpheme corresponds to what I called the phi-feature morpheme in Chapter \ref{ch:the-basic-idea} and the introduction to this chapter.
+This morpheme corresponds to what I called the phi feature morpheme in Chapter \ref{ch:the-basic-idea} and the introduction to this chapter.
 I show that this morpheme corresponds to pronominal features and gender features.
 
 First I will show that the \tit{o} does not only appear in relative pronouns, but that it also appears in other pronouns.
@@ -1086,7 +1086,7 @@ To summarize, I decomposed the relative pronoun into the three morphemes \tit{k}
 
 \section{The Polish extra light head}\label{sec:pol-elh}
 
-I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them forms a constituent within other. In the introduction of this chapter, I claimed that in Polish features of the light head are spelled out in such a way that they form the constituency shown in \ref{ex:pol-lh-complex}.
+I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them forms a constituent within other. In the introduction of this chapter, I claimed that the internal syntax of light heads in Polish looks as shown in \ref{ex:pol-lh-complex}.
 
 \ex.\label{ex:pol-lh-complex}
 \begin{forest} boom
@@ -1111,7 +1111,7 @@ I have suggested that headless relatives are derived from light-headed relatives
 \end{forest}
 
 \ref{ex:pol-lh-complex} shows that light heads consist of at least two features: ϕ and \tsc{k}, as I suggested in Chapter \ref{ch:the-basic-idea}. In this section, I specify the feature content of the light head in more detail.
-Just like I suggested in Chapter \ref{ch:deriving-onlyinternal}, I end up claiming that the phi- and case-feature morphemes of the relative pronoun are the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:pol-elh}.
+Just like I suggested in Chapter \ref{ch:deriving-onlyinternal}, I end up claiming that the phi and case feature morphemes of the relative pronoun are the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:pol-elh}.
 
 % Crucially, the constituent structure in \ref{ex:pol-elh} is the same as in \ref{ex:simple-matching}. Recall from Chapter \ref{ch:deriving-onlyinternal} that in Modern German the extra light head spells out as a single constituent. The Polish extra light head consists of two constituents, as shown in \ref{ex:pol-elh}. This is the crucial difference between the two languages that leads them to be of different types in headless relatives.
 
@@ -1521,7 +1521,7 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
 
 The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{go}.
 The extra light head consists of two morphemes: \tit{o} and \tit{go}.
-As usual, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it, or I reduce the structure to a triangle, and I place the corresponding phonology under it.
+As usual, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology below it, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
@@ -1644,7 +1644,7 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
 
 The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{mu}.
 The light head consists of two morphemes: \tit{o} and \tit{go}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it, or I reduce the structure to a triangle, and I place the corresponding phonology under it.
+Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology below it, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
@@ -1771,7 +1771,7 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
 
 The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{go}.
 The light head consists of two morphemes: \tit{o} and \tit{mu}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it, or I reduce the structure to a triangle, and I place the corresponding phonology under it.
+Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology below it, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{dat}P.
@@ -1783,7 +1783,7 @@ Therefore, the extra light head cannot be deleted, and the relative pronoun cann
 
 Polish is an example of a matching type of language. This means that headless relatives are grammatical in the language only when the internal and external case match.
 
-I derive this from the morphology of light heads and relative pronouns in Polish. The light head corresponds to two lexical entries, which respectively spells out phi- and case-features. The relative pronoun corresponds in addition to that to another lexical entry, one that amongst other spells out a relative feature. The Polish light head and relative pronoun are schematically shown in Figure \ref{fig:rel-lh-pol-sum}.
+I derive this from the morphology of light heads and relative pronouns in Polish. The light head corresponds to two lexical entries, which respectively spells out phi and case features. The relative pronoun corresponds in addition to that to another lexical entry, one that amongst other spells out a relative feature. The Polish light head and relative pronoun are schematically shown in Figure \ref{fig:rel-lh-pol-sum}.
 
 \begin{figure}[htbp]
   \center
@@ -1855,6 +1855,6 @@ I derive this from the morphology of light heads and relative pronouns in Polish
   \label{fig:rel-lh-pol-sum}
 \end{figure}
 
-A crucial characteristic of matching languages such as Polish is that they have separate morphemes for phi- and case-features. Therefore, the light head is contained as a constituent within the relative pronoun when the internal and the external case match. As the light head can be recovered from within the relative pronoun, it can be deleted. There is a grammatical headless relative that surfaces with the relative pronoun which bears the internal case.
+A crucial characteristic of matching languages such as Polish is that they have separate morphemes for phi and case features. Therefore, the light head is contained as a constituent within the relative pronoun when the internal and the external case match. As the light head can be recovered from within the relative pronoun, it can be deleted. There is a grammatical headless relative that surfaces with the relative pronoun which bears the internal case.
 
 When the internal and external case differ, neither the light head nor the relative pronoun is contained as a constituent within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
