--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -4,7 +4,7 @@
 
 In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the unrestricted type have two possible light heads, which are part of the derivation under different circumstances. The first possible light head can part of the derivation used when the internal and external case match, and it appears when the internal case is more complex than the external one. The second possible light head can be part of the derivation when the internal and the external case too, and it appears when the external case is more complex than the internal one.
 
-In the first possible light head, the light head corresponds to the phi- and case-feature part of the relative pronoun. The phi- and case-features are spelled out by a portmanteau morpheme, just as they are in the internal-only type of language. This means that the features of the relative pronoun and the light head are spelled out in such a way that they form the constituents shown in Figure \ref{fig:rel-lh-unres-simple}.
+In the first possible light head, the light head corresponds to the phi and case feature part of the relative pronoun. Just as in the internal-only type of language, there are two lexical entries that spell out light heads and relative pronouns: a portmanteau for phi and case features and a separate lexical entry that spells out the feature \tsc{rel}. This means that the internal syntax of light heads and relative pronouns looks as shown in Figure \ref{fig:rel-lh-unres-simple}.
 
 \begin{figure}[htbp]
   \center
@@ -55,7 +55,7 @@ In the first possible light head, the light head corresponds to the phi- and cas
   \label{fig:rel-lh-unres-simple-1}
 \end{figure}
 
-These lexical entries lead to a grammaticality pattern as shown in Table \ref{tbl:overview-unres-1}.
+These lexical entries lead to the grammaticality pattern shown in Table  \ref{tbl:overview-unres-1}.
 
 \begin{table}[htbp]
   \center
@@ -81,9 +81,9 @@ These lexical entries lead to a grammaticality pattern as shown in Table \ref{tb
 \label{tbl:overview-unres-1}
 \end{table}
 
-First consider the situation in which the internal and the external case match. The situation here is identical to the one in the internal-only type of language. The light head consists of a phi- and case-feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such syntactic structures that the light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
+First consider the situation in which the internal and the external case match. The situation here is identical to the one in the internal-only type of language. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such syntactic structures that the light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
 
-Consider now the situation in the internal case wins the case competition. Here situation is identical to the one in the internal-only type of language too. The light head consists of a phi- and case-feature portmanteau. The relative pronoun consists of a phi- and case-feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-unres-1}) plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such syntactic structures that the light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
+Consider now the situation in the internal case wins the case competition. Here situation is identical to the one in the internal-only type of language too. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of a phi and case feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-unres-1}) plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such syntactic structures that the light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
 
 In Chapter \ref{ch:typology}, I showed that Old High German is a language of the unrestricted type. In this chapter, I show that Old High German has light heads and relative pronouns of type of structure described in Figure \ref{fig:rel-lh-unres-simple-1}. I give a compact version of the structures in Figure \ref{fig:rel-lh-ohg-1}.
 
@@ -140,12 +140,14 @@ In Chapter \ref{ch:typology}, I showed that Old High German is a language of the
 \end{figure}
 
 Consider the first possible light head in Figure \ref{fig:rel-lh-ohg-1}.
-These light heads (i.e. phi- and case-features) in Old High German are spelled out by a single morpheme, indicated by the circle around the structure. They are spelled out as \tit{n} or \tit{m}, depending on which case they realize.
+These light heads (i.e. phi and case features) in Old High German are spelled out by a single morpheme, indicated by the circle around the structure. They are spelled out as \tit{n} or \tit{m}, depending on which case they realize.
 Consider the relative pronoun in Figure \ref{fig:rel-lh-ohg-1}.
-Relative pronouns in Old High German consist of two morphemes: the constituent that forms the light head (i.e. phi- and case features) and the \tsc{rel}P, again indicated by the circles. The \tsc{rel}P is spelled out as \tit{de}.
+Relative pronouns in Old High German consist of two morphemes: the constituent that forms the light head (i.e. phi and case features) and the \tsc{rel}P, again indicated by the circles. The \tsc{rel}P is spelled out as \tit{de}.
 Throughout this chapter, I discuss the exact feature content of relative pronouns and light heads, I give lexical entries for them, and I show how these lexical entries form the constituents shown in Figure \ref{fig:rel-lh-ohg-1}.
 
-In the second possible light head, the light head corresponds to the phi- and case-feature part of the relative pronoun plus an additional feature X. This feature X is also present in the morpheme that spells out the feature \tsc{rel}. The phi- and case-features are still spelled out by a portmanteau morpheme. The feature X is spelled out by a separate morpheme, which is the same morpheme that spells out X plus the feature \tsc{rel}. This means that the features of the relative pronoun and the light head are spelled out in such a way that they form the constituents shown in Figure \ref{fig:rel-lh-unres-simple-2}.
+In the second possible light head, the light head corresponds to the phi and case feature part of the relative pronoun plus an additional feature X. This feature X is also present in the relative pronoun.
+
+There are two lexical entries that spell out light heads and relative pronouns: a portmanteau for phi and case features and a separate lexical entry that spells out the features X and \tsc{rel}. This means that the internal syntax of light heads and relative pronouns looks as shown in Figure \ref{fig:rel-lh-unres-simple-2}.
 
 \begin{figure}[htbp]
   \center
@@ -213,7 +215,7 @@ In the second possible light head, the light head corresponds to the phi- and ca
   \label{fig:rel-lh-unres-simple-2}
 \end{figure}
 
-These lexical entries lead to a grammaticality pattern as shown in Table \ref{tbl:overview-unres-2}.
+These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl:overview-unres-2}.
 
 \begin{table}[htbp]
   \center
@@ -239,9 +241,9 @@ These lexical entries lead to a grammaticality pattern as shown in Table \ref{tb
 \label{tbl:overview-unres-2}
 \end{table}
 
-First consider the situation in which the internal and the external case match. The light head consists of a phi- and case-feature portmanteau and a morpheme that spells out the feature X, which corresponds to phonological form \tit{X}. The relative pronoun consists of the same phi- and case-feature morpheme and a morpheme that spells out the feature X and the feature \tsc{rel}, which corresponds to the phonological form \tit{X} too. When the internal and the external case match, the phonological form corresponding to the phi- and case features is identical between the light head and the relative pronoun too. These lexical entries create such syntactic structures that the light head and the relative pronoun are formally identical. Since there is formal containment, one of the elements can be deleted, and the the other one surfaces with its case.
+First consider the situation in which the internal and the external case match. The light head consists of a phi and case feature portmanteau and a morpheme that spells out the feature X, which corresponds to phonological form \tit{X}. The relative pronoun consists of the same phi and case feature morpheme and a morpheme that spells out the feature X and the feature \tsc{rel}, which corresponds to the phonological form \tit{X} too. When the internal and the external case match, the phonological form corresponding to the phi and case features is identical between the light head and the relative pronoun too. These lexical entries create such syntactic structures that the light head and the relative pronoun are formally identical. Since there is formal containment, one of the elements can be deleted, and the the other one surfaces with its case.
 
-Consider now the situation in the external case wins the case competition. The light head consists of a phi- and case-feature portmanteau and a morpheme that spells out the feature X, which corresponds to phonological form \tit{X}. The relative pronoun consists of the same phi- and case-feature morpheme and a morpheme that spells out the feature X and the feature \tsc{rel}, which corresponds to the phonological form \tit{X} too. When the external case is more complex than the internal case (i.e. when the two cases differ), the phonological forms corresponding to the phi- and case features of the light head and the relative pronoun differ. However, the derivation in which the external case is more complex than the internal one goes through a stage in which the internal and the external case match. Therefore, at that stage, these lexical entries form such syntactic structures that the light head and the relative pronoun are formally identical. Since there is formal containment, one of the elements can be deleted, and the the other one surfaces with its case. Then, the more complex case is merged to the remaining element.
+Consider now the situation in the external case wins the case competition. The light head consists of a phi and case feature portmanteau and a morpheme that spells out the feature X, which corresponds to phonological form \tit{X}. The relative pronoun consists of the same phi and case feature morpheme and a morpheme that spells out the feature X and the feature \tsc{rel}, which corresponds to the phonological form \tit{X} too. When the external case is more complex than the internal case (i.e. when the two cases differ), the phonological forms corresponding to the phi and case features of the light head and the relative pronoun differ. However, the derivation in which the external case is more complex than the internal one goes through a stage in which the internal and the external case match. Therefore, at that stage, these lexical entries form such syntactic structures that the light head and the relative pronoun are formally identical. Since there is formal containment, one of the elements can be deleted, and the the other one surfaces with its case. Then, the more complex case is merged to the remaining element.
 
 In Chapter \ref{ch:typology}, I showed that Old High German is a language of the unrestricted type. In this chapter, I show that Old High German has light heads and relative pronouns of type of structure described in Figure \ref{fig:rel-lh-unres-simple-2}. I give a compact version of the structures in Figure \ref{fig:rel-lh-ohg-2}.
 
@@ -312,10 +314,10 @@ In Chapter \ref{ch:typology}, I showed that Old High German is a language of the
 \end{figure}
 
 Consider the first possible light head in Figure \ref{fig:rel-lh-ohg-2}.
-These light heads in Old High German are spelled out by two morphemes, which are both circled. The morpheme that realizes the feature X is spelled out as \tit{de} and the phi-and case-features are spelled out as \tit{n} or \tit{m}, depending on which case they realize.
+These light heads in Old High German are spelled out by two morphemes, which are both circled. The morpheme that realizes the feature X is spelled out as \tit{de} and the phi and case features are spelled out as \tit{n} or \tit{m}, depending on which case they realize.
 
 Consider the relative pronoun in Figure \ref{fig:rel-lh-ohg-2}.
-Relative pronouns in Old High German are spelled out by the same two morphemes as the second possible light head. There is the phi- and case-feature morpheme (spelling out as \tit{n} or \tit{m}) and the morpheme that spells out the feature X and in the relative pronoun also the feature \tsc{rel} (spelling out as \tit{de}).
+Relative pronouns in Old High German are spelled out by the same two morphemes as the second possible light head. There is the phi and case feature morpheme (spelling out as \tit{n} or \tit{m}) and the morpheme that spells out the feature X and in the relative pronoun also the feature \tsc{rel} (spelling out as \tit{de}).
 Throughout this chapter, I discuss the exact feature content of relative pronouns and light heads, I give lexical entries for them, and I show how these lexical entries form the constituents shown in Figure \ref{fig:rel-lh-ohg-2}.
 
 This chapter is structured as follows.
@@ -557,7 +559,7 @@ In Figure \ref{fig:ohg-int=ext-elh}, I give the syntactic structure of the extra
 
 The relative pronoun consists of two morphemes: \tit{dhe} and \tit{r}.
 The extra light head consists of a single morpheme: \tit{r}.
-As usual, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it, or I reduce the structure to a triangle, and I place the corresponding phonology under it.
+As usual, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology below it, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single constituent: the \tsc{nom}P.
@@ -655,7 +657,7 @@ In Figure \ref{fig:ohg-int=ext-lh}, I give the syntactic structure of the light 
 
 The relative pronoun consists of two morphemes: \tit{dhe} and \tit{r}.
 The light head also consists of two morphemes: \tit{dhe} and \tit{r}.
-I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it, or I reduce the structure to a triangle, and I place the corresponding phonology under it.
+I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology below it, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dotted circle around each constituent that is a constituent in both the light head and the relative pronoun.
 
 The light head (the \tsc{d}P realized by \tit{dher}) is syncretic with the relative pronoun (the \tsc{rel}P realized by \tit{dher}).
@@ -756,7 +758,7 @@ In Figure \ref{fig:mg-ext-wins-elh}, I give the syntactic structure of the extra
 
 The relative pronoun consists of two morphemes: \tit{dhe} and \tit{r}.
 The extra light head consists of a single morpheme: \tit{n}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it, or I reduce the structure to a triangle, and I place the corresponding phonology under it.
+Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology below it, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single constituent: the \tsc{acc}P.
@@ -997,7 +999,7 @@ In Figure \ref{fig:ohg-int-wins}, I give the syntactic structure of the extra li
 
 The relative pronoun consists of two morphemes: \tit{the} and \tit{n}.
 The extra light head consists of a single morpheme: \tit{r}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it, or I reduce the structure to a triangle, and I place the corresponding phonology under it.
+Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology below it, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single constituent: the \tsc{nom}P.
