--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[hidelinks,a4paper,twoside]{memoir}
 
-% \includeonly{the-basic-idea}
+\includeonly{the-basic-idea}
 %
 % \setulmarginsandblock{3.3cm}{4cm}{*}
 % \setlrmarginsandblock{3cm}{3cm}{*}
@@ -49,6 +49,10 @@ Boarnsterhim, Niederlande\\
 202..
 
 \end{titlingpage}
+
+\clearpage
+
+\phantom{x}
 
 \clearpage
 \chapter*[Acknowledgements]{Acknowledgements}
